Bug 442237 - No file name label for readonly files
Summary: No file name label for readonly files
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: Properties dialog (other bugs)
Version First Reported In: git master
Platform: Other Linux
: HI normal
Target Milestone: ---
Assignee: KIO Bugs
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2021-09-09 20:30 UTC by Kai Uwe Broulik
Modified: 2021-09-14 17:34 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.87
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Uwe Broulik 2021-09-09 20:30:01 UTC
SUMMARY
There is no file name displayed in properties dialog for readonly files anymore

STEPS TO REPRODUCE
1. Open properties to a readonly file, e.g. something in /usr/share or whatever

OBSERVED RESULT
File dialog opens and no file name is displayed next to the icon

EXPECTED RESULT
The file name is displayed next to the icon

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: git master as of 2021-09-09
Qt Version: 5.15.2
Comment 1 Nate Graham 2021-09-10 14:09:36 UTC
Can confirm.
Comment 2 Bug Janitor Service 2021-09-10 15:02:16 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kio/-/merge_requests/576
Comment 3 Ahmad Samir 2021-09-14 17:34:43 UTC
Git commit 54efaf612600ae68773c760636563aca512090b2 by Ahmad Samir.
Committed on 14/09/2021 at 17:32.
Pushed by ahmadsamir into branch 'master'.

KPropertiesDialog: show text label with item name for readonly items too
FIXED-IN: 5.87

M  +5    -3    src/widgets/kpropertiesdialog.cpp

https://invent.kde.org/frameworks/kio/commit/54efaf612600ae68773c760636563aca512090b2