KPropertiesDialog: show text label with item name for readonly items too

BUG: 442237
FIXED-IN: 5.87